<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3772E7"
    android:orientation="vertical"
    android:padding="20dp">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/app_name"
            style="@style/MessageTextStyle" />

    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layoutZero"
        android:layout_marginTop="@dimen/layoutTop"
        android:layout_weight="@dimen/weightOne"
        android:orientation="horizontal"
        tools:ignore="ExtraText">


        <Button
            android:id="@+id/Buttonmainone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#ffffff"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="#1A1B22"
            android:textSize="@dimen/textSize"
            app:cornerRadius="@dimen/cornerRadius"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/layoutTop"
            app:iconTint="@color/black" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layoutZero"
        android:layout_marginTop="@dimen/layoutTop"
        android:layout_weight="@dimen/weightOne"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ButtonMaintwo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#ffffff"
            android:text="@string/media"
            android:textAllCaps="false"
            android:textColor="#1A1B22"
            android:textSize="@dimen/textSize"
            app:cornerRadius="@dimen/cornerRadius"
            app:icon="@drawable/musik"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/layoutTop"

            app:iconTint="@color/black" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layoutZero"
        android:layout_marginTop="@dimen/layoutTop"
        android:layout_weight="@dimen/weightOne"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ButtonMainthree"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#ffffff"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="#1A1B22"
            android:textSize="@dimen/textSize"
            app:cornerRadius="@dimen/cornerRadius"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/layoutTop"

            app:iconTint="@color/black" />
    </LinearLayout>


</LinearLayout>